Update from https://github.com/aqwerty420/Awfully-Typed/commit/bf062c45a9d98561844df2911bfb1e0b33baa6ba

--- a/awful-config.json
+++ b/awful-config.json
@@ -1,9 +1,3 @@
 {
-  "load": [
-    "lualib_bundle",
-    "system",
-    "spells",
-    "gui",
-    "myWork"
-  ]
+  "load": ["lualib_bundle", "system", "spells", "gui", "myWork"]
 }
